--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "peerDependencies": {
     "react": "^16.0",
-    "react-native": ">=0.57 <0.63"
+    "react-native": "0.63.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
